Ajustes de pastas

--- a/js/element/index.html
+++ b/js/element/index.html
@@ -12,7 +12,7 @@
     <div id="div-pai">
         <p id="first">First</p>
     </div>
-    <script src="element.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
