--- a/js/async/index.html
+++ b/js/async/index.html
@@ -5,14 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programação Assíncrona</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <input placeholder="Insira o seu CEP" id="cep" type="text">
-    <button id="btn">Enviar</button>
-    <div id="container"></div>
-    <button id="btn-joke">Nova piada</button>
-    <div id="joke"></div>
+    <button id="btn-joke">Novo conselho</button>
+    <p id="conselho"></p>
+    <!-- <table class="table-main">
+        <thead class="header">
+            <tr>
+                <th>Imagem</th>
+                <th>Nome</th>
+                <th>E-mail</th>
+                <th>Telefone</th>
+                <th>País</th>
+            </tr>
+        </thead>
+        <tbody class="body" id="table-body">
+        </tbody>
+    </table> -->
     <script src="./index.js"></script>
 </body>
 
